# research-pipeline-agent

./: .gitignore  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  dockerfile  langgraph.json  package-lock.json  pyproject.toml  requirements.txt
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/app/: main.py
backend/app/agents/: fact_checker.py  orchestrator.py  report_writer.py  summarizer.py  web_search.py
backend/app/api/: routers.py
backend/app/db/: dependencies.py  models.py  postgres.py  utils.py
backend/app/graph/: checkpointer.py  pipeline.py  state.py  utils.py
backend/app/schemas/: research.py
backend/app/services/: job_services.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  @ungap.js  bail.js  character-entities.js  clsx.js  comma-separated-tokens.js  debug.js  decode-named-character-reference.js  dequal.js  devlop.js  estree-util-is-identifier-name.js  extend.js  hast-util-to-text.js  (+52 more)
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: AgentTrace.tsx  HITLPanel.tsx  ReportViewer.tsx  ResearchForm.tsx  StatusBadge.tsx
frontend/lib/: api.ts
(+28 files in other folders)
